# ue-mini-boom-manager

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/ue_mini_boom_controller/: __init__.py  __main__.py  ble.py  cli.py  interactive.py  protocol.py  spp.py
tests/: test_ble.py  test_cli.py  test_protocol.py  test_spp.py
